[project]
name = ""
version = ""
description = ""
authors = [
    {name = "nobody", email = "nowhere@on.the.net"},
]
dependencies = [
    "fastapi>=0.104.1",
    "pydantic>=2.5.2",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "httpx>=0.25.2",
    "fastapi-SQLA>=3.0.1",
    "fastapi-cache>=0.1.0",
    "uvicorn>=0.24.0.post1",
]
requires-python = "==3.11.6"
readme = "README.md"
license = {text = "MIT"}

